<resources>
    <string name="app_name">Klaf</string>
    <string name="the_desk_is_empty">the deck is empty</string>
    <string name="button_turn">Turn</string>
    <string name="button_easy">Easy</string>
    <string name="button_good">Good</string>
    <string name="button_bad">Bad</string>
    <string name="timer_zero">00:0</string>
    <string name="title_desk">deck:</string>
    <string name="button_start">Start</string>
    <string name="native_word">N</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="foreign_word">F</string>
    <string name="description_button_show_options">Button show options</string>
    <string name="description_button_add_card">button add card</string>
    <string name="description_button_edit_card">button edit card</string>
    <string name="description_button_delete_card">button delete card</string>
    <string name="dialog_button_delete_deck">Delete deck</string>
    <string name="dialog_button_rename_deck">Rename deck</string>
    <string name="dialog_button_show_cards">Show cards</string>
    <string name="dialog_button_add_cards">Add cards</string>
    <string name="end_repetition">End repetition</string>
    <string name="last_duration">Last duration:</string>
    <string name="current_duration">Current duration:</string>
    <string name="new_scheduled_date">New scheduled date:</string>
    <string name="last_scheduled_date">Last scheduled date:</string>
    <string name="last_repetition_date">Last repetition date:</string>
    <string name="repetition_quantity">Repetition quantity:</string>
    <string name="success_mark">Last success mark:</string>
</resources>