<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    tools:background="@color/app_background" >

    <TextView
        android:id="@+id/textViewTitleGeneral"
        style="@style/dialog_title"
        tools:text="Desk name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCallDeletingDeckDialog"
        style="@style/dialog_button"
        android:text="@string/dialog_button_delete_deck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleGeneral" />

    <Button
        android:id="@+id/buttonCallEditingDeckDialog"
        style="@style/dialog_button"
        android:text="@string/dialog_button_rename_deck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCallDeletingDeckDialog" />

    <Button
        android:id="@+id/buttonShowCardsViewer"
        style="@style/dialog_button"
        android:text="@string/dialog_button_show_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCallEditingDeckDialog" />

    <Button
        android:id="@+id/buttonToAddCardActivity"
        style="@style/dialog_button"
        android:text="@string/dialog_button_add_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonShowCardsViewer" />
</androidx.constraintlayout.widget.ConstraintLayout>