<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".screens.LessonActivity">

    <TextView
        android:id="@+id/textViewWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_desk_is_empty"
        android:textColor="#E8D743"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="257dp" />

    <Button
        android:id="@+id/buttonTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_button"
        android:onClick="onClickTurn"
        android:text="@string/button_turn"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickEasy"
        android:text="@string/button_easy"
        android:backgroundTint="@color/green_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGood"
        app:layout_constraintTop_toTopOf="@+id/buttonGood" />

    <Button
        android:id="@+id/buttonGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_button"
        android:onClick="onClickGood"
        android:text="@string/button_good"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonTurn"
        app:layout_constraintStart_toStartOf="@+id/buttonTurn"
        app:layout_constraintTop_toBottomOf="@+id/buttonTurn"
        app:layout_constraintVertical_bias="0.23000002" />

    <Button
        android:id="@+id/buttonBad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickBad"
        android:text="@string/button_bad"
        android:backgroundTint="@color/green_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGood"
        app:layout_constraintEnd_toStartOf="@+id/buttonGood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonGood" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewIpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textViewWord"
        app:layout_constraintStart_toStartOf="@+id/textViewWord"
        app:layout_constraintTop_toBottomOf="@+id/textViewWord" />

    <TextView
        android:id="@+id/textViewTimeCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/timer_zero"
        android:textColor="@color/hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#8CA173"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_baseline_fingerprint_24"
        app:tint="@color/white"
        android:contentDescription="@string/description_button_show_options" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAddCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:onClick="onButtonAddClick"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButtonMain"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButtonMain"
        app:maxImageSize="68dp"
        app:srcCompat="@drawable/ic_add"
        app:tint="#BCB08C"
        android:contentDescription="@string/description_button_add_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonEditCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:onClick="onButtonEditClick"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="#C6B2B0"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonAddCard"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton3"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_edit"
        app:tint="@color/white"
        android:contentDescription="@string/description_button_edit_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onButtonDeleteClick"
        android:visibility="invisible"
        app:backgroundTint="#D8B074"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonMain"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButtonMain"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/ic__delete_card"
        app:tint="@color/white"
        android:contentDescription="@string/description_button_delete_card" />

    <TextView
        android:id="@+id/textViewTitleDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/arapey_italic"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:text="@string/title_desk"
        android:textColor="#9F9F9F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLessonDeskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewLessonDeskName"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textViewLessonDeskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        android:textColor="#E19F3E"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTimeCounter"
        app:layout_constraintStart_toEndOf="@+id/textViewTitleDesk"
        app:layout_constraintTop_toTopOf="@+id/textViewTimeCounter" />

    <Button
        android:id="@+id/buttonStartLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:backgroundTint="@color/green_button"
        android:onClick="onClickStartLesson"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonEasy" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewArrow"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/textViewArrow"
        app:layout_constraintTop_toBottomOf="@+id/textViewArrow"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textViewWordTypeFront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/native_word"
        android:padding="3dp"
        android:layout_marginStart="10dp"
        android:drawablePadding="20dp"
        android:textColor="@color/word_front"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleDesk" />

    <TextView
        android:id="@+id/textViewArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow"
        android:textColor="@color/hint"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWordTypeFront"
        app:layout_constraintStart_toEndOf="@+id/textViewWordTypeFront"
        app:layout_constraintTop_toTopOf="@+id/textViewWordTypeFront" />

    <TextView
        android:id="@+id/textViewWordTypeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:padding="3dp"
        android:text="@string/foreign_word"
        android:textColor="@color/word_back"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textViewArrow"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleDesk" />

</androidx.constraintlayout.widget.ConstraintLayout>